--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
   "regexManagers": [
     {
       "fileMatch": ["meltano\\.yml$"],
-      "matchStrings": ["\\n*pip_url:\\spsycopg2-binary\\s(?<depName>.*?)==(?<currentValue>.*?)\\s--constraint\\shttps://raw\\.githubusercontent\\.com/apache/airflow/constraints-2\\.3\\.3/constraints-\\${MELTANO__PYTHON_VERSION}\\.txt\\n"],
+      "matchStrings": ["\pip_url:\\spsycopg2-binary\\s(?<depName>.*?)==(?<currentValue>.*?)\\s--constraint\\shttps://raw\\.githubusercontent\\.com/apache/airflow/constraints-2\\.3\\.3/constraints-\\${MELTANO__PYTHON_VERSION}\\.txt\\n"],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "apache-airflow"
     }
